[package]
name = "hover"
version = "0.1.0"
authors = ["apohrebniak <andrii.pohrebniak@gmail.com>"]
edition = "2018"

[dependencies]
socket2 = { version = "0.3.8", features = ["reuseport"] }
#serialization
serde = { version = "1.0.89", features = ["derive"] }
serde_repr = { version = "0.1.3"}
bincode = "1.1.3"
#multithreading
crossbeam-channel = "0.3"
uuid = { version = "0.7", features = ["serde", "v4"] }
chashmap = "2.2.2"
rand = "0.6"