[package]
name = "kv-rest"
version = "0.1.0"
authors = ["apohrebniak <andrii.pohrebniak@gmail.com>"]
edition = "2018"

[dependencies]
hover = {git = "http://github.com/apohrebniak/hover", branch = "master"}
gotham = "0.3.0"
gotham_derive = "0.3.0"
hyper = "*"
mime = "*"
serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0"
chashmap = "2.2.2"
bincode = "1.1.3"
config = { version = "0.9", features = ["yaml"]}
uuid = { version = "0.7", features = ["serde", "v4"] }
futures = "0.1"